Initial portfolio commit

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shubham Chahal - MERN Stack Developer</title>
+    <title>Shubham Choudhery - MERN Stack Developer</title>
     <meta name="description" content="Full-Stack MERN Developer crafting scalable web applications with modern technologies" />
-    <meta name="author" content="Shubham Chahal" />
+    <meta name="author" content="Shubham Choudhery" />
     
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Shubham Chahal - MERN Stack Developer" />
+    <meta property="og:title" content="Shubham Choudhery - MERN Stack Developer" />
     <meta property="og:description" content="Full-Stack MERN Developer crafting scalable web applications" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20200721/original/pngtree-ds-letters-initial-logo-design-vector-png-image_4868347.jpg" type="image/x-icon">
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" /> -->
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
